--- a/index.html
+++ b/index.html
@@ -11,20 +11,10 @@
             border-radius: 50%; transform: translate(-50%, -50%); 
             pointer-events: none; z-index: 10;
         }
-        #ui {
-            position: absolute; bottom: 20px; left: 20px;
-            color: white; font-family: sans-serif; background: rgba(0,0,0,0.5); padding: 15px;
-            border-radius: 8px; line-height: 1.6;
-        }
     </style>
 </head>
 <body>
     <div id="crosshair"></div>
-    <div id="ui">
-        <b>DEBUG MODE</b><br>
-        F12キーでコンソールを開いてアニメーション名を確認してください。<br>
-        E/S/Q/C: 移動 / Space: ジャンプ
-    </div>
 
     <script type="importmap">
     {
@@ -40,50 +30,46 @@
         import { GLTFLoader } from 'three/examples/jsm/loaders/GLTFLoader.js';
 
         const scene = new THREE.Scene();
-        scene.background = new THREE.Color(0x87CEEB);
+        scene.background = new THREE.Color(0x050510); // 夜っぽく暗めに
         const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
         const renderer = new THREE.WebGLRenderer({ antialias: true });
         renderer.setSize(window.innerWidth, window.innerHeight);
         document.body.appendChild(renderer.domElement);
 
-        scene.add(new THREE.AmbientLight(0xffffff, 1.0));
+        // ライト設定
+        scene.add(new THREE.AmbientLight(0xffffff, 0.5));
         const dirLight = new THREE.DirectionalLight(0xffffff, 1.0);
         dirLight.position.set(5, 10, 7);
         scene.add(dirLight);
 
-        const floor = new THREE.Mesh(new THREE.PlaneGeometry(200, 200), new THREE.MeshStandardMaterial({ color: 0x444444 }));
+        // 地面
+        const floor = new THREE.Mesh(new THREE.PlaneGeometry(500, 500), new THREE.MeshStandardMaterial({ color: 0x111111 }));
         floor.rotation.x = -Math.PI / 2;
         scene.add(floor);
 
+        // プレイヤー構造
         const playerGroup = new THREE.Group();
         scene.add(playerGroup);
         const modelContainer = new THREE.Group(); 
         playerGroup.add(modelContainer);
 
-        let playerModel, mixer, walkAction;
+        let mixer, walkAction;
         const clock = new THREE.Clock();
 
+        // --- night.glb の読み込み ---
         const gltfLoader = new GLTFLoader();
-        gltfLoader.load('./fsb.glb', (gltf) => {
-            playerModel = gltf.scene;
+        gltfLoader.load('./night.glb', (gltf) => {
+            const playerModel = gltf.scene;
             playerModel.scale.set(1.5, 1.5, 1.5);
-            playerModel.rotation.y = Math.PI; 
+            playerModel.rotation.y = Math.PI; // 背中を向ける
             modelContainer.add(playerModel);
 
-            mixer = new THREE.AnimationMixer(playerModel);
-
-            // --- アニメーション発掘処理 ---
+            // アニメーション設定
             if (gltf.animations.length > 0) {
-                console.log("🔥 アニメーションを発見しました！件数:", gltf.animations.length);
-                gltf.animations.forEach((clip, index) => {
-                    console.log(`[${index}] アニメーション名: ${clip.name}`);
-                });
-
-                // とりあえず1番目のモーションをセットして再生しっぱなしにする
+                mixer = new THREE.AnimationMixer(playerModel);
+                // 最初のアニメーション（通常はIdleかWalk）を強制再生
                 walkAction = mixer.clipAction(gltf.animations[0]);
                 walkAction.play();
-            } else {
-                console.error("❌ この.glbファイルにはアニメーションが含まれていません。");
             }
         });
 
@@ -106,13 +92,13 @@
         function animate() {
             requestAnimationFrame(animate);
             const delta = clock.getDelta();
-            if (mixer) mixer.update(delta); // これがアニメーションを動かす心臓
+            if (mixer) mixer.update(delta); // アニメーション更新
 
             if (document.pointerLockElement === document.body) {
                 const isMoving = keys['KeyE'] || keys['KeyS'] || keys['KeyQ'] || keys['KeyC'];
                 const moveSpeed = 0.15;
 
-                // 移動処理
+                // --- 移動処理 (E, S, Q, C) ---
                 if (keys['KeyE']) {
                     playerGroup.position.x -= Math.sin(cameraYaw) * moveSpeed;
                     playerGroup.position.z -= Math.cos(cameraYaw) * moveSpeed;
@@ -130,6 +116,16 @@
                     playerGroup.position.z -= Math.sin(cameraYaw) * moveSpeed;
                 }
 
+                // --- アニメーションのON/OFF（移動中だけ動かす場合） ---
+                if (walkAction) {
+                    if (isMoving) {
+                        walkAction.paused = false;
+                    } else {
+                        // 止まっている時はアニメーションを一時停止（またはスローに）
+                        walkAction.paused = true;
+                    }
+                }
+
                 // ジャンプ
                 velocityY += gravity;
                 playerGroup.position.y += velocityY;
@@ -145,16 +141,15 @@
                 let diff = cameraYaw - modelYaw;
                 while (diff < -Math.PI) diff += Math.PI * 2;
                 while (diff > Math.PI) diff -= Math.PI * 2;
-                const threshold = Math.PI / 2.5; 
                 if (isMoving) {
                     modelYaw += diff * 0.15;
-                } else if (Math.abs(diff) > threshold) {
-                    modelYaw += Math.sign(diff) * (Math.abs(diff) - threshold) * 0.1;
+                } else if (Math.abs(diff) > Math.PI/2.5) {
+                    modelYaw += Math.sign(diff) * (Math.abs(diff) - Math.PI/2.5) * 0.1;
                 }
                 modelContainer.rotation.y = modelYaw;
             }
 
-            // カメラ位置更新
+            // カメラ更新
             const offset = new THREE.Vector3(0, 2, 4.5);
             const quat = new THREE.Quaternion().setFromEuler(new THREE.Euler(cameraPitch, cameraYaw, 0, 'YXZ'));
             offset.applyQuaternion(quat);
