--- a/index.html
+++ b/index.html
@@ -5,22 +5,17 @@
     <title>新しいタブ</title>
     <style>
         body { margin: 0; overflow: hidden; background-color: #000; }
-        #crosshair { 
-            position: absolute; top: 50%; left: 50%; 
-            width: 12px; height: 12px; border: 2px solid white; 
-            border-radius: 50%; transform: translate(-50%, -50%); 
-            pointer-events: none; z-index: 10;
-        }
-        #ui {
-            position: absolute; bottom: 20px; left: 20px;
-            color: white; font-family: sans-serif; background: rgba(0,0,0,0.5); padding: 15px;
-            border-radius: 8px; pointer-events: none;
-        }
+        #crosshair { position: absolute; top: 50%; left: 50%; width: 12px; height: 12px; border: 2px solid white; border-radius: 50%; transform: translate(-50%, -50%); pointer-events: none; z-index: 10; }
+        #ui { position: absolute; bottom: 20px; left: 20px; color: white; font-family: sans-serif; background: rgba(0,0,0,0.7); padding: 15px; border-radius: 8px; line-height: 1.6; }
     </style>
 </head>
 <body>
     <div id="crosshair"></div>
-    <div id="ui">E:前 / S:後 / Q:左 / C:右 / Space:ジャンプ</div>
+    <div id="ui">
+        <b>操作: E/S/Q/Cキーで移動</b><br>
+        <b>モーション切替: 数字の「1」「2」「3」を押してみて！</b><br>
+        (どれかが歩きモーションのはずです)
+    </div>
 
     <script type="importmap">
     {
@@ -36,18 +31,19 @@
         import { GLTFLoader } from 'three/examples/jsm/loaders/GLTFLoader.js';
 
         const scene = new THREE.Scene();
-        scene.background = new THREE.Color(0x050510);
+        scene.background = new THREE.Color(0x87CEEB); 
         const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
         const renderer = new THREE.WebGLRenderer({ antialias: true });
         renderer.setSize(window.innerWidth, window.innerHeight);
         document.body.appendChild(renderer.domElement);
 
-        scene.add(new THREE.AmbientLight(0xffffff, 0.6));
-        const dirLight = new THREE.DirectionalLight(0xffffff, 1.0);
-        dirLight.position.set(5, 10, 7);
-        scene.add(dirLight);
+        // --- ライト（爆光設定） ---
+        scene.add(new THREE.AmbientLight(0xffffff, 2.0)); 
+        const sun = new THREE.DirectionalLight(0xffffff, 2.0);
+        sun.position.set(10, 20, 10);
+        scene.add(sun);
 
-        const floor = new THREE.Mesh(new THREE.PlaneGeometry(500, 500), new THREE.MeshStandardMaterial({ color: 0x222222 }));
+        const floor = new THREE.Mesh(new THREE.PlaneGeometry(500, 500), new THREE.MeshStandardMaterial({ color: 0x444444 }));
         floor.rotation.x = -Math.PI / 2;
         scene.add(floor);
 
@@ -56,7 +52,8 @@
         const modelContainer = new THREE.Group(); 
         playerGroup.add(modelContainer);
 
-        let mixer, idleAction, walkAction, currentAction;
+        let mixer, actions = [];
+        let currentAction;
         const clock = new THREE.Clock();
 
         const gltfLoader = new GLTFLoader();
@@ -68,28 +65,26 @@
 
             if (gltf.animations.length > 0) {
                 mixer = new THREE.AnimationMixer(playerModel);
-                
-                // --- 【ここをチェック！】アニメーションの割り当て ---
-                // もし動きが逆（歩くときに待機）なら、[0] と [1] を入れ替えてください
-                idleAction = mixer.clipAction(gltf.animations[0]); 
-                walkAction = gltf.animations.length > 1 ? mixer.clipAction(gltf.animations[1]) : idleAction;
-
-                currentAction = idleAction;
+                // 全アニメーションを配列に入れる
+                gltf.animations.forEach((clip) => {
+                    actions.push(mixer.clipAction(clip));
+                });
+                // とりあえず最初のアニメーションを再生
+                currentAction = actions[0];
                 currentAction.play();
             }
         });
 
-        // モーションを滑らかに繋ぐ関数
-        function fadeTo(nextAction) {
-            if (!nextAction || currentAction === nextAction) return;
-            nextAction.reset().fadeIn(0.2).play();
-            currentAction.fadeOut(0.2);
-            currentAction = nextAction;
+        // モーションを強制的に切り替える関数
+        function changeMotion(index) {
+            if (!actions[index]) return;
+            actions.forEach(a => a.stop());
+            currentAction = actions[index];
+            currentAction.play();
         }
 
         let cameraYaw = 0, cameraPitch = 0, modelYaw = 0;
         let velocityY = 0;
-        const gravity = -0.012;
         const keys = {};
 
         document.addEventListener('click', () => document.body.requestPointerLock());
@@ -100,7 +95,13 @@
             cameraPitch = Math.max(-Math.PI/3, Math.min(Math.PI/3, cameraPitch));
         });
 
-        window.addEventListener('keydown', (e) => keys[e.code] = true);
+        window.addEventListener('keydown', (e) => {
+            keys[e.code] = true;
+            // 数字キーでモーションテスト
+            if (e.key === "1") changeMotion(0);
+            if (e.key === "2") changeMotion(1);
+            if (e.key === "3") changeMotion(2);
+        });
         window.addEventListener('keyup', (e) => keys[e.code] = false);
 
         function animate() {
@@ -112,14 +113,6 @@
                 const isMoving = keys['KeyE'] || keys['KeyS'] || keys['KeyQ'] || keys['KeyC'];
                 const moveSpeed = 0.15;
 
-                // --- モーション切り替え ---
-                if (isMoving) {
-                    fadeTo(walkAction);
-                } else {
-                    fadeTo(idleAction);
-                }
-
-                // 移動
                 if (keys['KeyE']) {
                     playerGroup.position.x -= Math.sin(cameraYaw) * moveSpeed;
                     playerGroup.position.z -= Math.cos(cameraYaw) * moveSpeed;
@@ -137,34 +130,24 @@
                     playerGroup.position.z -= Math.sin(cameraYaw) * moveSpeed;
                 }
 
-                // ジャンプ
-                velocityY += gravity;
+                velocityY -= 0.012;
                 playerGroup.position.y += velocityY;
-                if (playerGroup.position.y < 0) {
-                    playerGroup.position.y = 0;
-                    velocityY = 0;
-                }
-                if (keys['Space'] && playerGroup.position.y <= 0.01) {
-                    velocityY = 0.25;
-                }
+                if (playerGroup.position.y < 0) { playerGroup.position.y = 0; velocityY = 0; }
+                if (keys['Space'] && playerGroup.position.y <= 0.01) velocityY = 0.25;
 
-                // 視点追従
                 let diff = cameraYaw - modelYaw;
                 while (diff < -Math.PI) diff += Math.PI * 2;
                 while (diff > Math.PI) diff -= Math.PI * 2;
-                if (isMoving) {
-                    modelYaw += diff * 0.15;
-                } else if (Math.abs(diff) > Math.PI/2.5) {
-                    modelYaw += Math.sign(diff) * (Math.abs(diff) - Math.PI/2.5) * 0.1;
-                }
+                if (isMoving) modelYaw += diff * 0.15;
                 modelContainer.rotation.y = modelYaw;
             }
 
-            const offset = new THREE.Vector3(0, 2, 4.5);
+            // --- 視点をさらに高く・見やすく ---
+            const offset = new THREE.Vector3(0, 3.5, 6.5); // 以前より高く遠く
             const quat = new THREE.Quaternion().setFromEuler(new THREE.Euler(cameraPitch, cameraYaw, 0, 'YXZ'));
             offset.applyQuaternion(quat);
             camera.position.copy(playerGroup.position).add(offset);
-            camera.lookAt(playerGroup.position.clone().add(new THREE.Vector3(0, 1.5, 0)));
+            camera.lookAt(playerGroup.position.clone().add(new THREE.Vector3(0, 2.0, 0)));
 
             renderer.render(scene, camera);
         }
