--- a/index.html
+++ b/index.html
@@ -2,20 +2,14 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <title>新しいタブ</title>
+    <title>3D TPS - Optimized Night</title>
     <style>
         body { margin: 0; overflow: hidden; background-color: #000; }
         #crosshair { position: absolute; top: 50%; left: 50%; width: 12px; height: 12px; border: 2px solid white; border-radius: 50%; transform: translate(-50%, -50%); pointer-events: none; z-index: 10; }
-        #ui { position: absolute; bottom: 20px; left: 20px; color: white; font-family: sans-serif; background: rgba(0,0,0,0.7); padding: 15px; border-radius: 8px; line-height: 1.6; }
     </style>
 </head>
 <body>
     <div id="crosshair"></div>
-    <div id="ui">
-        <b>操作: E/S/Q/Cキーで移動</b><br>
-        <b>モーション切替: 数字の「1」「2」「3」を押してみて！</b><br>
-        (どれかが歩きモーションのはずです)
-    </div>
 
     <script type="importmap">
     {
@@ -29,6 +23,7 @@
     <script type="module">
         import * as THREE from 'three';
         import { GLTFLoader } from 'three/examples/jsm/loaders/GLTFLoader.js';
+        import { DRACOLoader } from 'three/examples/jsm/loaders/DRACOLoader.js'; // 圧縮解除用
 
         const scene = new THREE.Scene();
         scene.background = new THREE.Color(0x87CEEB); 
@@ -37,9 +32,9 @@
         renderer.setSize(window.innerWidth, window.innerHeight);
         document.body.appendChild(renderer.domElement);
 
-        // --- ライト（爆光設定） ---
-        scene.add(new THREE.AmbientLight(0xffffff, 2.0)); 
-        const sun = new THREE.DirectionalLight(0xffffff, 2.0);
+        // ライト
+        scene.add(new THREE.AmbientLight(0xffffff, 1.8)); 
+        const sun = new THREE.DirectionalLight(0xffffff, 1.5);
         sun.position.set(10, 20, 10);
         scene.add(sun);
 
@@ -52,11 +47,16 @@
         const modelContainer = new THREE.Group(); 
         playerGroup.add(modelContainer);
 
-        let mixer, actions = [];
-        let currentAction;
+        let mixer, actions = {}, currentAction;
         const clock = new THREE.Clock();
 
+        // --- DracoLoaderの設定（圧縮ファイルを読み込むために必要） ---
+        const dracoLoader = new DRACOLoader();
+        dracoLoader.setDecoderPath('https://www.gstatic.com/draco/versioned/decoders/1.5.6/');
+
         const gltfLoader = new GLTFLoader();
+        gltfLoader.setDRACOLoader(dracoLoader);
+
         gltfLoader.load('./night.glb', (gltf) => {
             const playerModel = gltf.scene;
             playerModel.scale.set(1.5, 1.5, 1.5);
@@ -65,22 +65,26 @@
 
             if (gltf.animations.length > 0) {
                 mixer = new THREE.AnimationMixer(playerModel);
-                // 全アニメーションを配列に入れる
-                gltf.animations.forEach((clip) => {
-                    actions.push(mixer.clipAction(clip));
+                
+                // アニメーションを整理（名前がわからなくても0, 1, 2で管理）
+                // 一般的な順番：0=Idle, 1=Walk, 2=Run, 3=Jump（モデルにより異なる）
+                gltf.animations.forEach((clip, index) => {
+                    actions[index] = mixer.clipAction(clip);
                 });
-                // とりあえず最初のアニメーションを再生
+
+                // 最初は「0番(Idle)」を再生
                 currentAction = actions[0];
-                currentAction.play();
+                if (currentAction) currentAction.play();
             }
         });
 
-        // モーションを強制的に切り替える関数
-        function changeMotion(index) {
-            if (!actions[index]) return;
-            actions.forEach(a => a.stop());
-            currentAction = actions[index];
-            currentAction.play();
+        // スムーズなモーション切り替え関数
+        function fadeTo(index) {
+            const nextAction = actions[index];
+            if (!nextAction || currentAction === nextAction) return;
+            nextAction.reset().fadeIn(0.2).play();
+            currentAction.fadeOut(0.2);
+            currentAction = nextAction;
         }
 
         let cameraYaw = 0, cameraPitch = 0, modelYaw = 0;
@@ -95,13 +99,7 @@
             cameraPitch = Math.max(-Math.PI/3, Math.min(Math.PI/3, cameraPitch));
         });
 
-        window.addEventListener('keydown', (e) => {
-            keys[e.code] = true;
-            // 数字キーでモーションテスト
-            if (e.key === "1") changeMotion(0);
-            if (e.key === "2") changeMotion(1);
-            if (e.key === "3") changeMotion(2);
-        });
+        window.addEventListener('keydown', (e) => keys[e.code] = true);
         window.addEventListener('keyup', (e) => keys[e.code] = false);
 
         function animate() {
@@ -111,8 +109,19 @@
 
             if (document.pointerLockElement === document.body) {
                 const isMoving = keys['KeyE'] || keys['KeyS'] || keys['KeyQ'] || keys['KeyC'];
+                const onGround = playerGroup.position.y <= 0.01;
                 const moveSpeed = 0.15;
 
+                // --- モーション自動判定 ---
+                if (!onGround) {
+                    fadeTo(3); // 空中にいればジャンプ（3番と想定）
+                } else if (isMoving) {
+                    fadeTo(1); // 動いていれば歩き（1番と想定）
+                } else {
+                    fadeTo(0); // 止まっていれば待機（0番と想定）
+                }
+
+                // 移動
                 if (keys['KeyE']) {
                     playerGroup.position.x -= Math.sin(cameraYaw) * moveSpeed;
                     playerGroup.position.z -= Math.cos(cameraYaw) * moveSpeed;
@@ -133,21 +142,25 @@
                 velocityY -= 0.012;
                 playerGroup.position.y += velocityY;
                 if (playerGroup.position.y < 0) { playerGroup.position.y = 0; velocityY = 0; }
-                if (keys['Space'] && playerGroup.position.y <= 0.01) velocityY = 0.25;
+                if (keys['Space'] && onGround) velocityY = 0.25;
 
+                // 視点追従
                 let diff = cameraYaw - modelYaw;
                 while (diff < -Math.PI) diff += Math.PI * 2;
                 while (diff > Math.PI) diff -= Math.PI * 2;
-                if (isMoving) modelYaw += diff * 0.15;
+                if (isMoving) {
+                    modelYaw += diff * 0.15;
+                } else if (Math.abs(diff) > Math.PI/2.5) {
+                    modelYaw += Math.sign(diff) * (Math.abs(diff) - Math.PI/2.5) * 0.1;
+                }
                 modelContainer.rotation.y = modelYaw;
             }
 
-            // --- 視点をさらに高く・見やすく ---
-            const offset = new THREE.Vector3(0, 3.5, 6.5); // 以前より高く遠く
+            const offset = new THREE.Vector3(0, 2.5, 5.0); 
             const quat = new THREE.Quaternion().setFromEuler(new THREE.Euler(cameraPitch, cameraYaw, 0, 'YXZ'));
             offset.applyQuaternion(quat);
             camera.position.copy(playerGroup.position).add(offset);
-            camera.lookAt(playerGroup.position.clone().add(new THREE.Vector3(0, 2.0, 0)));
+            camera.lookAt(playerGroup.position.clone().add(new THREE.Vector3(0, 1.8, 0)));
 
             renderer.render(scene, camera);
         }
